[project]
name = "renovate-test"
version = "0.1.0"
description = "renovate-test"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "loguru>=0.7.2",
    "lxml>=5.3.0",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pyopenssl>=24.2.1",
    "requests>=2.32.3",
    "rich>=12.0.0",
    "stamina>=24.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/util"]

[tool.uv]
dev-dependencies = [
    "mdformat>=0.7.18",
    "mdformat-footnote>=0.1.1",
    "mdformat-frontmatter>=2.0.8",
    "mdformat-gfm>=0.3.6",
    "mdformat-gfm-alerts>=1.0.1",
    "pre-commit>=4.0.1",
    "ruff>=0.7.1",
    "sqlfluff>=3.2.5",
    "taskipy>=1.14.0",
]

[tool.taskipy.tasks]
hook = "pre-commit install --install-hooks"
unhook = "pre-commit uninstall"
lint = "pre-commit run --all-files"
test = "pytest"

[tool.ruff]
line-length = 99

[tool.ruff.lint]
select = [
    "ANN", # flake8-annotations
    "B", # flake8-bugbear
    "C4", # flake8-comprehensions
    "DTZ", # flake8-datetimez
    "E", # pycodestyle - Error
    "F", # pyflakes
    "I", # isort
    "INT", # flake8-gettext
    "ISC", # flake8-implicit-str-concat
    "N", # pep8-naming
    "PGH", # pygrep-hooks
    "PIE", # flake8-pie
    "Q", # flake8-quotes
    "RET", # flake8-return
    "RSE", # flake8-raise
    "RUF", # Ruff-specific rules
    "S", # flake8-bandit
    "SIM", # flake8-simplify
    "T20", # flake8-print
    "TID", # flake8-tidy-imports
    "UP", # pyupgrade
    "W", # pycodestyle - Warning
]

ignore = [
    "ANN101", # Missing type annotation for self in method
    "ANN401", # Missing return type annotation for public function
    "D105", # Missing docstring in magic method
    "D107", # Missing docstring in __init__
    "D203", # 1 blank line required before class docstring
    "D212", # Multi-line docstring summary should start at the first line
    "D406", # Section name should end with a newline
    "D407", # Missing dashed underline after section
    "D413", # Missing blank line after last section

    # The following rules are disabled for formatter compatibility

    "E111", # Indentation is not a multiple of {indent_width}
    "E114", # Indentation is not a multiple of {indent_width} (comment)
    "E117", # Over-indented (comment)
    "ISC001", # Implicitly concatenated string literals on one line
    "ISC002", # Implicitly concatenated string literals over multiple lines
    "Q000", # Single quotes found but double quotes preferred
    "Q001", # Single quote multiline found but double quotes preferred
    "Q002", # Single quote docstring found but double quotes preferred
    "Q003", # Change outer quotes to avoid escaping inner quotes
    "W191", # Indentation contains tabs
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S","ANN"]

[tool.ruff.lint.isort]
combine-as-imports = true
